results/SVCOMP/conversational/log-StringStartEnd03-2024_03_17_09_54_06.txt
/*
 * Origin of the benchmark:
 *     license: 4-clause BSD (see /java/jbmc-regression/LICENSE)
 *     repo: https://github.com/diffblue/cbmc.git
 *     branch: develop
 *     directory: regression/jbmc-strings/StringStartEnd03
 * The benchmark was taken from the repo: 24 January 2018
 */
import org.sosy_lab.sv_benchmarks.Verifier;

public class Main {
  //@ requires args != null;
  public static void main(String[] args) {
    String[] strings = new String[4];
    strings[0] = Verifier.nondetString();
    strings[1] = Verifier.nondetString();
    strings[2] = Verifier.nondetString();
    strings[3] = Verifier.nondetString();

    int i = 0;
    //@ maintaining 0 <= i && i <= strings.length;
    //@ maintaining (\forall int j; 0 <= j && j < i; strings[j].endsWith("ed"));
    //@ decreases strings.length - i;
    for (String string : strings) {
      if (string.endsWith("ed")) ++i;
    }
    assert i == 3;
  }
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:11: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:9: error: package org.sosy_lab.sv_benchmarks does not exist
import org.sosy_lab.sv_benchmarks.Verifier;
                                 ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:15: error: cannot find symbol
    strings[0] = Verifier.nondetString();
                 ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:16: error: cannot find symbol
    strings[1] = Verifier.nondetString();
                 ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:17: error: cannot find symbol
    strings[2] = Verifier.nondetString();
                 ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:18: error: cannot find symbol
    strings[3] = Verifier.nondetString();
                 ^
  symbol:   variable Verifier
  location: class Main
6 errors

// Unable to generate JML specifications for the provided Java program due to errors in the code. Please make sure the code is correct and free of compilation errors before generating JML specifications.

